# Topic-Modeling-ESG-DR

./: .env.example  .gitignore  CONFIG_MIGRATION.md  CRAWLER_USAGE.md  DATA_LOADER_10K_README.md  DATA_LOADER_10K_SUMMARY.md  QUICKSTART.md  README.md  README_brave.md  environment.yml  example_10k_workflow.py  main.py  plan.md  pyproject.toml  quick_test_10k.py  test_config.py
.claude/: settings.local.json
config/: config.yaml  keywords.yaml
data/: sp500.csv  sp500_2025.csv
src/: __init__.py  config_loader.py  crawler.py  data_loader.py  data_loader_10k.py  esg_crawler.py  mapper.py  scorer.py  topic_modeler.py  utils.py
tests/: test_data_loader.py  test_utils.py
