[project]
name = "esg-topic-modeling"
version = "0.1.0"
description = "ESG報告主題建模與數位韌性量化框架"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "bertopic>=0.16.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0.0",
    "backoff>=2.2.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
